# Gmail_Cleaner

./: .gitignore  README.md  main.py
backend/: pyproject.toml  requirements.txt
backend/app/: config.py  dependencies.py  main.py
backend/app/models/: auth.py  sender.py  settings.py
backend/app/routers/: auth.py  scan.py  senders.py  settings.py
backend/app/services/: gmail_auth.py  gmail_delete.py  gmail_filter.py  gmail_move_to_trash.py  gmail_scan.py  gmail_trash.py
backend/app/store/: __init__.py  session.py
backend/tests/: conftest.py  test_api.py
backend/tests/api/: test_endpoints.py
backend/tests/services/: test_services.py
frontend/: index.html  package-lock.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css  main.tsx
frontend/src/api/: auth.ts  client.ts  scan.ts  senders.ts  settings.ts
frontend/src/components/auth/: ProtectedRoute.tsx
frontend/src/components/deletion/: DeletionProgress.tsx
frontend/src/components/layout/: AppShell.tsx  Footer.tsx  Header.tsx
frontend/src/components/scan/: ScanButton.tsx  ScanProgress.tsx  ScanSummary.tsx
frontend/src/components/senders/: ActionButtons.tsx  BulkActionBar.tsx  SenderCard.tsx  SenderList.tsx  SenderPreview.tsx
frontend/src/context/: AuthContext.tsx  SettingsContext.tsx
frontend/src/hooks/: useAuth.ts  useDeletion.ts  useScan.ts  useSettings.ts
frontend/src/pages/: CallbackPage.tsx  DashboardPage.tsx  LoginPage.tsx  PPPage.tsx  SettingsPage.tsx  TOSPage.tsx
frontend/src/types/: index.ts
frontend/src/utils/: formatters.ts  sse.ts
scripts/: dev.ps1  dev.sh
