[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gmail-cleaner-backend"
version = "0.1.0"
description = "Gmail Cleaner FastAPI backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "google-api-python-client>=2.140.0",
    "google-auth-oauthlib>=1.2.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth>=2.35.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "python-dotenv>=1.0.0",
    "redis[asyncio]>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-spec>=3.2.0",   # Renders test names as human-readable spec lines
    "fakeredis>=2.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "--spec"
